- added support for database logging  - dev version uses a file based h2 database  - remove bad file based logging code  - deprecate command line version